<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="resultText">If you enter numbers your result will be shown here.</string>
    <string name="answer_heading">The Answer to Life:</string>
</resources>
