<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codeclan.example.calculator.CalculatorInputActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/enter_a_number"
        android:id="@+id/numA_EditText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/enter_a_number"
        android:id="@+id/numB_EditText" />

        <Button
            android:text="@string/add"
            android:layout_height="wrap_content"
            android:id="@+id/add_Btn"
            android:layout_width="match_parent"
            android:onClick="onAddButtonClicked"/>

        <Button
            android:text="@string/subtract"
            android:layout_height="wrap_content"
            android:id="@+id/sub_Btn"
            android:layout_width="match_parent" />

        <Button
            android:text="@string/divide"
            android:layout_height="wrap_content"
            android:id="@+id/div_Btn"
            android:layout_width="match_parent" />

        <Button
            android:text="@string/multiply"
            android:layout_height="wrap_content"
            android:id="@+id/multi_Btn"
            android:layout_width="match_parent" />
</LinearLayout>
